--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <charset=utf-8>
+    <meta charset=utf-8>
     <title>Experimental webpage</title>
     <style>
       h1{
@@ -23,7 +23,7 @@
   </head>
   
   <body>
-  <h1>Frankie's space</h1>
-  <p>This is a first attempt at making a website using GitHub.</p>
+    <h1>Frankie's space</h1>
+    <p>This is a first attempt at making a website using GitHub.</p>
   </body>
 </html>
